Checking Fix3 for Spacing bottom of header

--- a/style.css
+++ b/style.css
@@ -280,6 +280,12 @@ main {
   .navbar {
     display: none;
   }
+  .navigation {
+    margin-left: 8px;
+    margin-right: 8px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+  }
   .hamburger {
     display: block;
   }
@@ -302,6 +308,10 @@ main {
 
   .hero-section {
     flex-direction: column;
+    padding-left: 8px;
+    padding-right: 8px;
+    margin: 0;
+    gap: 16px;
   }
   .cta {
     display: flex;
@@ -310,8 +320,9 @@ main {
     justify-content: center;
     max-width: 350px;
     min-height: auto;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 4px;
+    padding-right: 4px;
+    margin: 0;
   }
   .cta > h1 {
     text-align: center;
